# kicad-mcp-server

./: .snyk  README.md  pyproject.toml  requirements.txt
src/kicad_mcp_server/: server.py
src/kicad_mcp_server/parsers/: netlist_parser.py  pcb_parser.py  pcb_parser_kicad.py  schematic_parser.py
src/kicad_mcp_server/tools/: __init__.py  device_tree.py  netlist.py  pcb.py  pin_analysis.py  project.py  validation.py
src/kicad_mcp_server/utils/: kicad_version.py
tests/fixtures/: example_schematic.xml
