[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kicad-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for KiCad file analysis and test code generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["kicad", "mcp", "schematic", "pcb", "test-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "mcp[cli]>=1.27.0",
    "fastmcp>=0.1.0",
    "kicad-skip>=0.2.5",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "smbus2>=0.4.0",  # I2C
    "spidev>=3.5",    # SPI (ARM only)
    "pyserial>=3.5",  # Serial
    "mock>=4.0.0",    # Mocking
]
hardware = [
    "RPi.GPIO>=0.7.0; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "smbus2>=0.4.0",
    "spidev>=3.5; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "pyserial>=3.5",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "kicad-mcp-server[test,hardware,dev]"
]

[project.scripts]
kicad-mcp-server = "kicad_mcp_server.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/kicad-mcp-server"
Documentation = "https://github.com/yourusername/kicad-mcp-server#readme"
Issues = "https://github.com/yourusername/kicad-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kicad_mcp_server"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
